--- a/index.html
+++ b/index.html
@@ -4,48 +4,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Practice</title>
+  <title>Gabriel</title>
+  <link rel="stylesheet" href="/videocorsi/theComplete2021webDevBootcamp/cssMySite/style.css">
+  <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/whatsapp/273/fire_1f525.png">
 </head>
+
 <body>
-  HOMEPAGE
-  <hr>
-  <table border="1">
-    <thead>
-      <tr>
-        <th>DATA</th>
-        <th>STAFF</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2014</td>
-        <td>Grilli</td>
-      </tr>
-      <tr>
-        <td>1231324654654651</td>
-        <td>Juan Gabriel Serna Torres</td>
-      </tr>
-    </tbody>
-  </table>
-  <hr>
-  <table cellspacing="20">
-    <thead>
-      <td>SKILLS</td>
-    </thead>
-    <tbody>
-      <tr>
-        <td>IOS DEVELOPMENT</td>
-        <td>😀😀😀</td>
-      </tr>
-      <tr>
-        <td>WEB DEVELOPMENT</td>
-        <td>😅😅😅</td>
-      </tr>
-      <tr>
-        <td>DEVOP</td>
-        <td>😚😚😚</td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="top-div">
+    <h1>I'm Gabriel.</h1>
+    <p>a Junior Developer</p>
+  </div>
+
+  <div class="medium-div">
+
+  </div>
+
+  <div class="foot-div">
+
+  </div>
+
 </body>
 </html>
