--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
 
 <body>
   <div class="top-div">
+    <img class="top-cloud" src="/videocorsi/theComplete2021webDevBootcamp/cssMySite/images/cloud.png" alt="cloud-img">
     <h1>I'm Gabriel.</h1>
     <p>a Junior Developer</p>
+    <img class="bottom-cloud" src="/videocorsi/theComplete2021webDevBootcamp/cssMySite/images/cloud.png" alt="cloud-img">
+    <img src="/videocorsi/theComplete2021webDevBootcamp/cssMySite/images/mountain.png" alt="mountain-img">
   </div>
 
-  <div class="medium-div">
+  <div class="middle-div">
 
   </div>
 
-  <div class="foot-div">
+  <div class="bottom-div">
 
   </div>
 
